// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TokenListItem /> > renders correctly and matches snapshot 1`] = `
<div
  className="flex justify-between items-end border-b py-4 border-b-black_grey group group-hover:border-b-black_grey/[.6] cursor-pointer"
  data-testid="token-list-item"
  onClick={[MockFunction spy]}
>
  <div
    className="flex items-center"
  >
    <div
      className="flex min-w-fit items-end"
    >
      <div
        className="w-[30px] h-[30px] relative rounded-full grayscale"
      >
        <img
          alt="token-logo"
          className="w-full h-full object-fill rounded-full"
          onError={[Function]}
          src="https://example.com/token-logo.png"
        />
      </div>
      <div
        className="w-3.5 h-3.5 rounded-full border border-white relative right-[7px] false"
      >
        <img
          alt="chain-logo"
          className="w-full h-full object-fill rounded-full grayscale false"
          src="/src/assets/images/logo-ethereum.png"
        />
      </div>
    </div>
    <div
      className="flex flex-col ml-[10px]"
    >
      <p
        className="text-base font-medium text-black_grey group-hover:opacity-60 truncate max-w-[150px]"
      >
        Token Example
      </p>
      <p
        className="text-xs font-normal text-black_grey group-hover:opacity-60"
      >
        TE
      </p>
    </div>
  </div>
  <div
    className="flex flex-col ml-[10px] items-end"
  >
    <p
      className="text-base font-medium text-black_grey group-hover:opacity-60 truncate max-w-[150px]"
    >
      23.456728
    </p>
    <p
      className="text-xs font-normal text-black_grey group-hover:opacity-60"
    >
      $
      26.9752
    </p>
  </div>
</div>
`;

exports[`<TokenListItem /> renders correctly and matches snapshot 1`] = `
<div
  className="flex justify-between items-end border-b py-4 border-b-black_grey group group-hover:border-b-black_grey/[.6] cursor-pointer"
  data-testid="token-list-item"
  onClick={[MockFunction]}
>
  <div
    className="flex items-center"
  >
    <div
      className="flex min-w-fit items-end"
    >
      <div
        className="w-[30px] h-[30px] relative rounded-full grayscale"
      >
        <img
          alt="token-logo"
          className="w-full h-full object-fill rounded-full"
          onError={[Function]}
          src="https://example.com/token-logo.png"
        />
      </div>
      <div
        className="w-3.5 h-3.5 rounded-full border border-white relative right-[7px] false"
      >
        <img
          alt="chain-logo"
          className="w-full h-full object-fill rounded-full grayscale false"
          src="logo-ethereum.png"
        />
      </div>
    </div>
    <div
      className="flex flex-col ml-[10px]"
    >
      <p
        className="text-base font-medium text-black_grey group-hover:opacity-60 truncate max-w-[150px]"
      >
        Token Example
      </p>
      <p
        className="text-xs font-normal text-black_grey group-hover:opacity-60"
      >
        TE
      </p>
    </div>
  </div>
  <div
    className="flex flex-col ml-[10px] items-end"
  >
    <p
      className="text-base font-medium text-black_grey group-hover:opacity-60 truncate max-w-[150px]"
    >
      23.456728
    </p>
    <p
      className="text-xs font-normal text-black_grey group-hover:opacity-60"
    >
      $
      26.9752
    </p>
  </div>
</div>
`;
